# sluice

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: phase-1.md  phase-10.md  phase-11.md  phase-12.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md  phases.md
packaging/: sluiced.service
packaging/debian/: postinst  prerm
sluice/: Cargo.toml
sluice-common/: Cargo.toml
sluice-common/src/: event.rs  ipc.rs  lib.rs  token_bucket.rs  verdict.rs
sluice-ebpf/: Cargo.toml  README.md  rust-toolchain.toml
sluice-ebpf/.cargo/: config.toml
sluice-ebpf/src/: main.rs  maps.rs  programs.rs
sluice-ebpf/src/programs/: connect4.rs  connect6.rs  sock_create.rs  tc_egress.rs
sluice/src/: app.rs  icons.rs  ipc_client.rs  main.rs  style.rs  subscription.rs
sluiced/: Cargo.toml
sluiced/src/: attach.rs  cgroup.rs  cli.rs  daemon.rs  dns_cache.rs  ebpf_loader.rs  formatter.rs  ipc_server.rs  kernel_bytes.rs  kernel_map.rs  kernel_rates.rs  main.rs  proc_cache.rs  proc_info.rs  ring_reader.rs
sluiced/src/rules/: matcher.rs  mod.rs  parse.rs  schema.rs  store.rs  types.rs
xtask/: Cargo.toml
xtask/src/: main.rs
