[workspace]
resolver = "2"
members = [
    "sluice-common",
    "sluiced",
    "sluice",
    "xtask",
]

# `sluice-ebpf` is intentionally NOT a member of this workspace. It builds
# for the `bpfel-unknown-none` target and is invoked separately by `xtask`.
exclude = ["sluice-ebpf"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kiran <kiran@ecorrouge.com>"]
repository = "https://github.com/kiran/sluice"
rust-version = "1.93"

[workspace.dependencies]
# Internal crates
sluice-common = { path = "sluice-common" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# eBPF userspace
aya = "0.13"
aya-log = "0.2"

# Logging / errors
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# GUI
iced = { version = "0.13", features = ["tokio"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
