[package]
name = "sluice-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Types shared between sluice-ebpf (kernel) and sluice/sluiced (userspace)."

[features]
default = ["std"]
# Userspace builds enable `std` for serde and Display impls. The eBPF crate
# depends on this with `default-features = false` to stay no_std.
std = ["serde/std", "dep:serde_json"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
