[package]
name = "sluice-ebpf"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kiran <kiran@ecorrouge.com>"]
publish = false
description = "Kernel-side eBPF programs for sluice. Compiled separately for bpfel-unknown-none."

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
sluice-common = { path = "../sluice-common", default-features = false }

[[bin]]
name = "sluice-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[workspace]
# Standalone workspace so this crate can target bpfel-unknown-none
# independently of the userspace crates.
