[package]
name = "sluiced"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Privileged sluice daemon — loads eBPF programs, owns the rules database, talks to the GUI over a Unix socket."

[[bin]]
name = "sluiced"
path = "src/main.rs"

# `cargo deb` (https://crates.io/crates/cargo-deb) reads this section.
# Run `cargo install cargo-deb && cargo deb -p sluiced` to produce a
# `.deb` for Debian/Ubuntu. The kernel-side eBPF object isn't packaged
# here — it lives in /usr/lib/sluice/sluice-ebpf and is built
# separately via `cargo run -p xtask -- build-ebpf`.
[package.metadata.deb]
maintainer = "Kiran <kiran@ecorrouge.com>"
copyright = "2026, Kiran"
license-file = ["../LICENSE", "0"]
extended-description = """\
Sluice is a per-process Linux network gate. It watches every outbound
TCP/UDP connection via eBPF (cgroup/connect4/connect6), prompts the
operator to allow or deny each, and shapes per-process egress
bandwidth via a tc-bpf token bucket.
"""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["../target/release/sluiced", "usr/bin/", "755"],
    ["../target/release/sluice", "usr/bin/", "755"],
    ["../sluice-ebpf/target/bpfel-unknown-none/release/sluice-ebpf", "usr/lib/sluice/sluice-ebpf", "644"],
    ["../packaging/sluiced.service", "lib/systemd/system/sluiced.service", "644"],
    ["../README.md", "usr/share/doc/sluice/README.md", "644"],
    ["../docs/phases.md", "usr/share/doc/sluice/phases.md", "644"],
]
conf-files = ["lib/systemd/system/sluiced.service"]
maintainer-scripts = "../packaging/debian"

[dependencies]
sluice-common = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
