[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Build orchestrator. Builds the kernel-side sluice-ebpf crate (separate workspace, BPF target) and chains userspace builds."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
